# sample-plutus

./: cabal.project  env.sh  mint-token-cli.sh  plutus-pioneer-program-week06.cabal  policy.plutus  query-tip.sh  sample-token.cabal  set-socket-path.sh  wallet.json
app/: test.hs
src/: Monitor.hs  PAB.hs
testnet/: pab-config.yml
